Update theme to hacker

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 title: PhoneOS-NFC Mobile App
 description: Setup instructions for Windows and Mac using VS Code for PhoneOS-NFC Mobile APP
-theme: jekyll-theme-cayman
+theme: jekyll-theme-hacker
 markdown: kramdown
